crates/rstest-bdd-macros/tests/fixtures/scenario_missing_step.stderr
error: No matching step definition found for: Given an undefined step
 --> tests/fixtures/scenario_missing_step.rs:3:1
  |
3 | #[scenario(path = "../../../../crates/rstest-bdd-macros/tests/features/unmatched.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
...
